--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portfolio",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://shrawank22.github.io",
+  "homepage": "https://shrawank22.github.io/",
   "type": "module",
   "scripts": {
     "dev": "vite",
