--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@iconify/icons-logos": "^1.2.36",
     "@iconify/react": "^4.1.1",
-    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.10.1",
@@ -32,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "gh-pages": "^6.1.1",
+    "sass": "^1.71.1",
     "vite": "^5.1.0"
   }
 }
